converted html to handlebars

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,17 +1,6 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>Passport Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
-</head>
-
 <body>
-   Nav bar
-   <nav class="navbar navbar-default">
+  <!-- Nav bar -->
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/logout">
@@ -22,7 +11,7 @@
   </nav>
 
   <div class="container">
-     Welcome message
+    <!-- Welcome message -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
@@ -31,7 +20,7 @@
 
     <div class="row">
       <div class="col">
-         Select wedding
+        <!-- Select wedding -->
         <label for="weddingList">Select an current wedding to work on</label>
         <select name="weddingList" id="weddingList">
           <option value="wedding1">wedding1</option>
@@ -43,7 +32,7 @@
       </div>
 
       <div class="col">
-         New wedding
+        <!-- New wedding -->
         <button type="button" class="btn btn-success" id="newWedding">Create New Wedding</button>
       </div>
     </div>
@@ -58,5 +47,3 @@
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
-
-</html>  -->
