added functionality for creating vendors

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,6 @@
 	<script src="/js/members.js"></script>
 	<script src="/js/planner.js"></script>
 	<script src="/js/signup.js"></script>
-
+	<script src="/js/vendor-create.js"></script>
 	</body>
 </html>
