added autcomplete functionality for vendor info to planner.js and planner.handlebars

--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -42,4 +42,7 @@
 
 {{!-- Scripts --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+{{!-- API key for Google API autocomplete feature for Venue info --}}
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZugWOlMVS7_70ajiCk05Mcn_g7qHMsls&libraries=places"></script>
 <script type="text/javascript" src="js/planner.js"></script>
