--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -18,6 +18,35 @@
       </div>
     </div>
 
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<div class="wedding-container">
+					<h1>Weddings</h1>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Couple</th>
+								<th>View Summary</th>
+								<th>Edit Info</th>
+								<th>Delete</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr id="form-row">
+								<form id="wedding-form">
+									<td colspan="4">
+										<input placeholder="Enter a name" id="couple-name" type="text" />
+									</td>
+									<td><button type="submit" class="btn btn-success">Create wedding</button>
+									</td>
+								</form>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+
     <div class="row">
       <div class="col">
         <!-- Select wedding -->
