changed table display for summary and member page. dynamic disply of vendor and event data on tables

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -26,11 +26,21 @@
 						<thead>
 							<tr>
 								<th>Couple</th>
+                <th>Event Date</th>
 								<th>View Summary</th>
 								<th>Edit Info</th>
 								<th>Delete</th>
 							</tr>
 						</thead>
+            {{#each event}}
+            <tr>
+              <td>{{dataValues.couple}}</td>
+              <td>{{dataValues.eventDate}}</td>
+              <td><a href="/summary">Summary</a></td>
+              <td><a href="/vendorInfos">Edit</a></td>
+              <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
+            </tr>
+            {{/each}}
 						<tbody>
 							<tr id="form-row">
 								<form id="wedding-form">
@@ -47,7 +57,7 @@
 			</div>
 		</div>
 
-    <div class="row">
+    {{!-- <div class="row">
       <div class="col">
         <!-- Select wedding -->
         <label for="weddingList">Select an current wedding to work on</label>
@@ -64,7 +74,7 @@
         <!-- New wedding -->
         <button type="button" class="btn btn-success" id="newWedding">Create New Wedding</button>
       </div>
-    </div>
+    </div> --}}
   </div>
 
 
