--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -47,7 +47,7 @@
 									<td colspan="4">
 										<input placeholder="Enter a name" id="couple-name" type="text" />
 									</td>
-									<td><button type="submit" class="btn btn-success">Create wedding</button>
+									<td><button type="button" class="btn btn-success" id="createWedding">Create wedding</button>
 									</td>
 								</form>
 							</tr>
