working on drop down

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -23,7 +23,7 @@
         <!-- Select wedding -->
         <label for="weddingList">Select an current wedding to work on</label>
         <select name="weddingList" id="weddingList">
-          <option value="wedding1">wedding1</option>
+          <option value="wedding1">{{couple}}</option>
           <option value="wedding2">wedding2</option>
           <option value="wedding3">wedding3</option>
           <option value="wedding4">wedding4</option>
@@ -37,6 +37,16 @@
       </div>
     </div>
   </div>
+    <script>
+      function getWedding() {
+    $.get("/api/eventInfos", data => {
+      const weddingName = data[0].couple;
+      console.log(data);
+      console.log(data[0].couple);
+    });
+  }
+
+    </script>
 
 
 
