--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="/stylesheets/style.css" type="text/css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<title>Wedding Planner!</title>
-		{{!-- <script src="https://code.jquery.com/jquery.js"></script> --}}
+		<script src="https://code.jquery.com/jquery.js"></script>
 		
 		
 		{{!-- <script type="text/javascript" src="/public/js/members.js"></script>
