fixed submit button name

--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -37,7 +37,7 @@
     </div>
 </form>
 
-{{!-- Control buttons --}}
+{{!-- Navigation buttons --}}
 <button type="button" class="btn btn-success" id="submitNewWedding">Submit</button>
 <button type="button" class="btn btn-success" id="backToMain">Main</button>
 <button type="button" class="btn btn-success" id="toSummary">Summary</button>
