--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -36,7 +36,7 @@
             <tr>
               <td>{{dataValues.couple}}</td>
               <td>{{dataValues.eventDate}}</td>
-              <td><a href="/summary">Summary</a></td>
+              <td><a href="/summary/{{dataValues.id}}">Summary</a></td>
               <td><a href="/vendorInfos">Edit</a></td>
               <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
             </tr>
