hard-coded associating vendor to event id

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -37,7 +37,7 @@
               <td>{{dataValues.couple}}</td>
               <td>{{dataValues.eventDate}}</td>
               <td><a href="/summary/{{dataValues.id}}">Summary</a></td>
-              <td><a href="/vendorInfos">Edit</a></td>
+              <td><a href="/vendorInfos/{{dataValues.id}}">Edit</a></td>
               <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
             </tr>
             {{/each}}
