--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -1,5 +1,7 @@
 {{!-- Vendor Input Form --}}
 <form class="vendor">
+  {{!-- This value here is for the eventInfoId to create vendor --}}
+  <h3 id="eventInfoId">{{eventInfoId}}</h3>
   <div class="form-group">
     {{!-- Name --}}
     <div class="form-group">
