deleted edit buttons from summary page. del text input from member page. changed link href for edit on summary

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -45,7 +45,7 @@
 							<tr id="form-row">
 								<form id="wedding-form">
 									<td colspan="4">
-										<input placeholder="Enter a name" id="couple-name" type="text" />
+										{{!-- <input placeholder="Enter a name" id="couple-name" type="text" /> --}}
 									</td>
 									<td><button type="button" class="btn btn-success" id="createWedding">Create wedding</button>
 									</td>
