--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,13 +2,16 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
+        {{!-- <ul>
+        <li><a href="#">Home</a></li>
+        </ul> --}}
       </div>
     </div>
   </nav>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h2>Sign In</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -25,7 +28,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p>Or log in <a href="/login">here</a>.</p>
       </div>
     </div>
   </div>
