--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
+@media(min-width:468px) {
+
 form.signup,
 form.login {
   margin-top: 50px;
@@ -22,3 +24,8 @@ p{
   color: #a9a9a9;
 }
 
+.planner{
+  flex-basis: ;
+}
+
+}
