changed input type to 'date' in planner form

--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -25,7 +25,7 @@
             {{!-- Event Date --}}
             <div class="form-group">
                 <label for="date">Date</label>
-                <input type="text" class="form-control" id="dateInput" placeholder="date">
+                <input type="date" class="form-control" id="dateInput" placeholder="date">
             </div>
             {{!-- Street Address --}}
             <div class="form-group">
