--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,9 @@ form.login {
   margin-top: 50px;
 }
 
-*{
+main, header, section, aside, footer, .container {
   margin: 0;
-  padding: 0; 
+  padding: 20px; 
   box-sizing: border-box;
   outline: none;
   list-style: none;
@@ -24,8 +24,6 @@ p{
   color: #a9a9a9;
 }
 
-.planner{
-  flex-basis: ;
-}
+
 
 }
