fixed create wedding btn on members'

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -48,12 +48,12 @@
 									<td colspan="4">
 										{{!-- <input placeholder="Enter a name" id="couple-name" type="text" /> --}}
 									</td>
-                  {{#each event}}
+                  {{!-- {{#each event}}
                   {{@event}}
-                  {{#if @last}}
-									<td><button type="button" class="btn btn-success" id="createWedding" data-id="{{dataValues.id}}">Create wedding</button>
-									{{/if}}
-                  {{/each}}
+                  {{#if @last}} --}}
+									<td><button type="button" class="btn btn-success" id="createWedding">Create wedding</button>
+									{{!-- {{/if}}
+                  {{/each}} --}}
                   {{!-- {{event.[event.length - 1].dataValues.id}} --}}
                   </td>
 								</form>
