updated delete button

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -37,9 +37,9 @@
             <tr>
               <td>{{dataValues.couple}}</td>
               <td>{{dataValues.eventDate}}</td>
-              <td class="select"><a href="/summary/{{dataValues.id}}">Summary</a></td>
+              <td><a href="/summary/{{dataValues.id}}">Summary</a></td>
               <td><a href="/vendorInfos/{{dataValues.id}}">Add</a></td>
-              <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
+              <td><a style='cursor:pointer;color:red' data-Id = "{{dataValues.id}}" class='delete-event'>{{dataValues.id}} Delete</a></td>
             </tr>
             {{/each}}
 						<tbody>
