finished delete button in summary page

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -40,7 +40,7 @@
               <td>{{dataValues.eventDate}}</td>
               <td><a href="/summary/{{dataValues.id}}">Summary</a></td>
               <td><a href="/vendorInfos/{{dataValues.id}}">Add</a></td>
-              <td><a style='cursor:pointer;color:red' data-Id = "{{dataValues.id}}" class='delete-event'>{{dataValues.id}} Delete</a></td>
+              <td><a style='cursor:pointer;color:red' data-Id = "{{dataValues.id}}" class='delete-event'>Delete</a></td>
             </tr>
             {{/each}}
 						<tbody>
