--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -27,7 +27,7 @@
         <td>{{event.foodOptionOne}}</td>
         <td>{{event.foodOptionTwo}}</td>
         <td><a href="/planner/">Edit</a></td>
-        <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
+        <td><a style='cursor:pointer;color:red' data-Id = "{{event.id}}" class='delete-event' href="/members">Delete</a></td>
       </tr>
     </table>
   </div>
