--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -5,7 +5,12 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/logout">
+          
             Logout
+          </a>
+          <a class="navbar-brand" href="/members">
+          
+            Main
           </a>
         </div>
       </div>
@@ -46,7 +51,7 @@
             <tr id="form-row">
               <form id="wedding-form">
                 <td colspan="4">
-                <td><button type="button" class="btn btn-success" id="createWedding">Create wedding</button>
+                <td><button type="button" class="btn btn-success" id="createWedding">Create Wedding</button>
                 </td>
               </form>
             </tr>
