--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -19,15 +19,13 @@
       </thead>
       {{!-- Body --}}
       <tr>
-        <td>{{event.couple}}</td>
-        <td>{{event.venueName}}</td>
-        <td>{{event.eventDate}}</td>
-        <td>{{event.addressStreet}}</td>
-        <td>{{event.addressCity}}</td>
-        <td>{{event.foodOptionOne}}</td>
-        <td>{{event.foodOptionTwo}}</td>
-        <td><a href="/planner/">Edit</a></td>
-        <td><a style='cursor:pointer;color:red' data-Id = "{{event.id}}" class='delete-event' href="/members">Delete</a></td>
+        <td><textarea>{{event.couple}}</textarea></td>
+        <td><textarea>{{event.venueName}}</textarea></td>
+        <td><textarea>{{event.eventDate}}</textarea></td>
+        <td><textarea>{{event.foodOptionOne}}</textarea></td>
+        <td><textarea>{{event.foodOptionTwo}}</textarea></td>
+        <td><button class="edit" id="edit{{event.id}}"><i class="far fa-edit" onclick="editEvent()"></i></button></td>
+        <td><a style='cursor:pointer;color:red' data-Id = "{{event.id}}" class='delete-event' href="/members" data-control="userBtn">Delete</a></td>
       </tr>
     </table>
   </div>
@@ -54,10 +52,13 @@
       <tr>
         <td><textarea>{{dataValues.vendorName}}</textarea></td>
         <td><textarea readonly>{{dataValues.service}}</textarea></td>
-        <td>{{dataValues.email}}</td>
-        <td>{{dataValues.phone}}</td>
+        <td><textarea readonly>{{dataValues.email}}</textarea></td>
+        <td><textarea readonly>{{dataValues.phone}}</textarea></td>
         <td><a href="/vendorInfos/{{dataValues.eventInfoId}}">Edit</a></td>
         <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
+        {{!-- test top --}}
+        <a href="#" class="updown-arrow" onClick="callUserDetail()" data-control="userBtn"><i class="icon-arrow-big"></i></a>
+        {{!-- test bottom --}}
       </tr>
       {{/each}}
     </table>
@@ -67,3 +68,15 @@
 {{!-- Scripts --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/summary.js"></script>
+<script> function editEvent() {
+
+    let data = $("#edit9")
+    console.log(data);
+    //!-- console.log("this was deleted");
+    //let data = $(".delete-vendor").attr("data-id");
+    //console.log(data);
+    //$.ajax({
+    //  method: "DELETE",
+    //  url: "/api/vendorInfos/" + data
+    //});
+  }</script>
