still working on delete buttons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,5 +19,6 @@
 	<script src="/js/planner.js"></script>
 	<script src="/js/signup.js"></script>
 	<script src="/js/vendor-create.js"></script>
+	<script src="js/summary.js"></script>
 	</body>
 </html>
