--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -17,7 +17,7 @@
     <!-- Welcome message -->
     <section class="welcome-user-message">
 
-      <h5>Welcome <span class="member-name"></span></h5>
+      <h5>Welcome back, <span class="member-name"></span>!</h5>
 
     </section>
 
