changed heading size of vendor info

--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -1,7 +1,6 @@
 <body>
   <main>
-    {{!-- Event Info Card--}}
-    <section>
+
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -14,7 +13,9 @@
         </div>
       </div>
     </nav>
-    {{!-- <div class="card" style="width: 33rem;"> --}}
+
+{{!-- Event Info Table --}}
+    <section>
       <div class="card-body">
         <h3 class="card-title">Event Info</h3>
         <table class="table table-striped">
@@ -48,13 +49,12 @@
           </tr>
         </table>
       </div>
-    </div>
-</section>
+    </section>
+
     {{!-- Vendor Info Card--}}
     <section>
-
       <div class="card-body">
-        <h5 class="card-title">Vendor Info</h5>
+        <h3 class="card-title">Vendor Info</h3>
         <table class="table table-striped">
           {{!-- Head --}}
           <thead>
