removed 'create wedding' button from table; changed 'create wedding' button to 'add wedding'

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -45,16 +45,8 @@
             <td><a style='cursor:pointer;color:red' data-Id="{{dataValues.id}}" class='delete-event'>Delete</a></td>
           </tr>
           {{/each}}
-          <tbody>
-            <tr id="form-row">
-              <form id="wedding-form">
-                <td colspan="4">
-                <td><button type="button" class="btn btn-success" id="createWedding">Create Wedding</button>
-                </td>
-              </form>
-            </tr>
-          </tbody>
         </table>
+        <button type="button" class="btn btn-success" id="createWedding">Add Wedding</button>
       </div>
     </section>
 
