--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -7,10 +7,8 @@
       <thead>
         <tr>
           <th>Couple</th>
-          <th>Event Date</th>
           <th>Venue</th>
-          <th>Address</th>
-          <th>City</th>
+          <th>Event Date</th>
           <th>Food Option One</th>
           <th>Food Option Two</th>
           <th>Edit</th>
@@ -18,14 +16,17 @@
         </tr>
       </thead>
       {{!-- Body --}}
-      <tr>
-        <td><textarea>{{event.couple}}</textarea></td>
-        <td><textarea>{{event.venueName}}</textarea></td>
-        <td><textarea>{{event.eventDate}}</textarea></td>
-        <td><textarea>{{event.foodOptionOne}}</textarea></td>
-        <td><textarea>{{event.foodOptionTwo}}</textarea></td>
-        <td><button class="edit" id="edit{{event.id}}"><i class="far fa-edit" onclick="editEvent()"></i></button></td>
-        <td><a style='cursor:pointer;color:red' data-Id = "{{event.id}}" class='delete-event' href="/members" data-control="userBtn">Delete</a></td>
+      <tr class="eventInfoEdit">
+        <td class="event-data" readonly><textarea>{{event.couple}}</textarea></td>
+        <td class="event-data" readonly><textarea>{{event.venueName}}</textarea></td>
+        <td class="event-data" readonly><textarea>{{event.eventDate}}</textarea></td>
+        <td class="event-data" readonly><textarea>{{event.foodOptionOne}}</textarea></td>
+        <td class="event-data" readonly><textarea>{{event.foodOptionTwo}}</textarea></td>
+        {{!-- <td><button class="editEvent" id="edit{{event.id}}"><i class="far fa-edit"></i>edit</button></td> --}}
+        <td><a class="editEvent" data-control="userBtn">Edit</a><a class="editEventSave" style="color: blueviolet;"
+            data-control="userBtnSave">Save</a></td>
+        <td><a style='cursor:pointer;color:red' data-Id="{{event.id}}" class='delete-event' href="/members">Delete</a>
+        </td>
       </tr>
     </table>
   </div>
@@ -57,7 +58,8 @@
         <td><a href="/vendorInfos/{{dataValues.eventInfoId}}">Edit</a></td>
         <td><a style='cursor:pointer;color:red' class='delete-event'>Delete</a></td>
         {{!-- test top --}}
-        <a href="#" class="updown-arrow" onClick="callUserDetail()" data-control="userBtn"><i class="icon-arrow-big"></i></a>
+        <a href="#" class="updown-arrow" onClick="callUserDetail()" data-control="userBtn"><i
+            class="icon-arrow-big"></i></a>
         {{!-- test bottom --}}
       </tr>
       {{/each}}
@@ -68,15 +70,38 @@
 {{!-- Scripts --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/summary.js"></script>
-<script> function editEvent() {
+<script type="text/javascript">
+  // When edit button toggle textarea readonly
+  $('td').on('click', '.editEvent', function (event) {
+    event.preventDefault();
+    // Target all text areas and toggle readonly
+    $("td.event-data").children("textarea").each(function () {
+      var re = $(this).prop('readonly');
+      $(this).prop('readonly', !re);
+    });
+  });
 
-    let data = $("#edit9")
-    console.log(data);
-    //!-- console.log("this was deleted");
-    //let data = $(".delete-vendor").attr("data-id");
-    //console.log(data);
-    //$.ajax({
-    //  method: "DELETE",
-    //  url: "/api/vendorInfos/" + data
-    //});
-  }</script>
+  // Save button 
+  $('td').on('click', '.editEventSave', function (event) {
+    event.preventDefault();
+
+    // This holds our event data
+    var data = {};
+    var counter = 0
+    // Target all text areas and put data into array
+    $("td.event-data").children("textarea").each(function () {
+      // We create key value pairs for the data obj
+      var key = "key" + counter;
+      data[key] = $(this).val();
+      counter++;
+    });
+    // Grab the id from the url
+    var id = (window.location.href).slice(-1)
+    $.ajax("/api/eventInfos/" + id, {
+      type: "PUT",
+      data: data
+    }).then(function () {
+      console.log("event edited");
+    })
+  });
+</script>
