--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -69,10 +69,13 @@
 <script> function deleteVendor(id) {
     console.log();
     console.log("this was deleted");
-    let data = $(".delete-vendor").attr("data-id");
-    console.log(vendorInfos[id].dataValues.id);
+    console.log(data);
+    console.log(id);
     $.ajax({
       method: "DELETE",
-      url: "/api/vendorInfos/" + 10 
-       });
+      url: "/api/vendorInfos/" + id 
+      }
+      )
+      location.reload();
+   
   }</script>
