--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container transistion-fade">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Login Form</h2>
@@ -30,4 +30,7 @@
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomBounce3.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomEase3.min.js"></script>
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
