updated gsap on member.handlebars

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -17,11 +17,11 @@
     <!-- Welcome message -->
     <section class="welcome-user-message">
 
-      <h5>Welcome back, <span class="member-name"></span>!</h5>
+      <h5 id="member">Welcome back, <span class="member-name"></span>!</h5>
 
     </section>
 
-    <section class="wedding-table-content">
+    <section id="wedding-info" class="wedding-table-content">
 
       <div class="wedding-container">
         <h1>Weddings</h1>
