--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,16 +3,21 @@
     <div class="container-fluid">
       <div class="navbar-header">
         {{!-- <ul>
-        <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
         </ul> --}}
       </div>
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign In</h2>
+        <h4>Sign Up</h4>
         <form class="signup">
+          <div class="form-group">
+            <label for="firstName">Name</label>
+            <input type="text" class="form-control" id="fname-input" placeholder="Name">
+          </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
