--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,7 +1,7 @@
 <body>
   <main>
     <!-- Nav bar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-expand-sm bg-light">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/members">
