added navbar to vendor infos page

--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -1,5 +1,17 @@
 <body>
   <main>
+      <nav class="navbar navbar-expand-sm bg-light">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/members">
+            Main
+          </a>
+          <a class="navbar-brand" href="/logout">
+            Logout
+          </a>
+        </div>
+      </div>
+    </nav>
     {{!-- Vendor Input Form --}}
     <form class="vendor">
       {{!-- This value here is for the eventInfoId to create vendor --}}
