added buttons to summary page and vendor create

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,3 +31,15 @@ textarea {
   outline: none;
   resize: none;
 }
+
+#circleButton{
+  border-radius: 50%;
+  font-size:x-large;
+  height: 30px;
+  width: 30px;
+  align-content: center;
+}
+
+#eventInfoId{
+  visibility: hidden;
+}
