--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -29,6 +29,7 @@
 
     {{!-- Submit button --}}
     <button type="button" class="btn btn-success" id="submitVendorCreate">Submit</button>
+    <button type="button" class="btn btn-success" id="addNewVendor">New Vendor</button>
 
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
