--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -52,7 +52,12 @@
     {{!-- Vendor Info Card--}}
     <section>
       <div class="card-body">
-        <h3 class="card-title">Vendor Info</h3>
+        <div class = "container">
+          <div class = "row">
+        <h3 class="card-title col-3">Vendor Info</h3>
+        <a type="button" class="btn btn-success col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add</a>
+          </div>
+        </div>
         <table class="table table-striped">
           {{!-- Head --}}
           <thead>
@@ -124,6 +129,7 @@
       function deleteVendor(id) {
     console.log("this was deleted");
     console.log(id);
+    
     $.ajax({
       method: "DELETE",
       url: "/api/vendorInfos/" + id 
