--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -1,7 +1,7 @@
 <body>
   <main>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-expand-sm bg-light">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/members">
@@ -18,34 +18,37 @@
     <section>
       <div class="card-body">
         <h3 class="card-title">Event Info</h3>
-        <table class="table table-striped">
-          {{!-- Head --}}
-          <thead>
-            <tr>
-              <th>Couple</th>
-              <th>Venue</th>
-              <th>Event Date</th>
-              <th>Food Option One</th>
-              <th>Food Option Two</th>
-              <th>Edit</th>
-              <th>Delete</th>
+        <div style="overflow-x:auto;">
+          <table class="table table-striped">
+            {{!-- Head --}}
+            <thead>
+              <tr>
+                <th>Couple</th>
+                <th>Venue</th>
+                <th>Event Date</th>
+                <th>Food Option One</th>
+                <th>Food Option Two</th>
+                <th>Edit</th>
+                <th>Delete</th>
+              </tr>
+            </thead>
+            {{!-- Body --}}
+            <tr class="eventInfoEdit">
+              <td class="event-data" readonly><textarea>{{event.couple}}</textarea></td>
+              <td class="event-data" readonly><textarea>{{event.venueName}}</textarea></td>
+              <td class="event-data" readonly><textarea>{{event.eventDate}}</textarea></td>
+              <td class="event-data" readonly><textarea>{{event.foodOptionOne}}</textarea></td>
+              <td class="event-data" readonly><textarea>{{event.foodOptionTwo}}</textarea></td>
+              {{!-- <td><button class="editEvent" id="edit{{event.id}}"><i class="far fa-edit"></i>edit</button></td>
+              --}}
+              <td><a class="editEvent" data-control="userBtn">Edit</a><a class="editEventSave"
+                  style="color: blueviolet;" data-control="userBtnSave">Save</a></td>
+              <td><a style='cursor:pointer;color:red' data-Id="{{event.id}}" class='delete-event'
+                  href="/members">Delete</a>
+              </td>
             </tr>
-          </thead>
-          {{!-- Body --}}
-          <tr class="eventInfoEdit">
-            <td class="event-data" readonly><textarea>{{event.couple}}</textarea></td>
-            <td class="event-data" readonly><textarea>{{event.venueName}}</textarea></td>
-            <td class="event-data" readonly><textarea>{{event.eventDate}}</textarea></td>
-            <td class="event-data" readonly><textarea>{{event.foodOptionOne}}</textarea></td>
-            <td class="event-data" readonly><textarea>{{event.foodOptionTwo}}</textarea></td>
-            {{!-- <td><button class="editEvent" id="edit{{event.id}}"><i class="far fa-edit"></i>edit</button></td> --}}
-            <td><a class="editEvent" data-control="userBtn">Edit</a><a class="editEventSave" style="color: blueviolet;"
-                data-control="userBtnSave">Save</a></td>
-            <td><a style='cursor:pointer;color:red' data-Id="{{event.id}}" class='delete-event'
-                href="/members">Delete</a>
-            </td>
-          </tr>
-        </table>
+          </table>
+        </div>
       </div>
     </section>
 
@@ -53,34 +56,38 @@
     <section>
       <div class="card-body">
         <h3 class="card-title">Vendor Info</h3>
-        <table class="table table-striped">
-          {{!-- Head --}}
-          <thead>
-            <tr>
-              <th>Vendor Name</th>
-              <th>Service</th>
-              <th>Email</th>
-              <th>Phone</th>
-              <th>Edit</th>
-              <th>Delete</th>
-            </tr>
-          </thead>
-          {{!-- Row populate --}}
-          {{#each vendor}}
-          <tr>
-            <td><textarea>{{dataValues.vendorName}}</textarea></td>
-            <td><textarea readonly>{{dataValues.service}}</textarea></td>
-            <td><textarea readonly>{{dataValues.email}}</textarea></td>
-            <td><textarea readonly>{{dataValues.phone}}</textarea></td>
-            <td><a href="/vendorInfos/{{dataValues.eventInfoId}}">Edit</a></td>
-            <td><button style='cursor:pointer;color:red' data-id = "{{dataValues.id}}" class='delete-vendor'onclick="deleteVendor({{dataValues.id}})">Delete</button></td>
-            {{!-- test top --}}
-            <a href="#" class="updown-arrow" onClick="callUserDetail()" data-control="userBtn"><i
-                class="icon-arrow-big"></i></a>
-            {{!-- test bottom --}}
-          </tr>
-          {{/each}}
-        </table>
+        <div style="overflow-x:auto;">
+          <table class="table table-striped">
+            <table class="table table-striped">
+              {{!-- Head --}}
+              <thead>
+                <tr>
+                  <th>Vendor Name</th>
+                  <th>Service</th>
+                  <th>Email</th>
+                  <th>Phone</th>
+                  <th>Edit</th>
+                  <th>Delete</th>
+                </tr>
+              </thead>
+              {{!-- Row populate --}}
+              {{#each vendor}}
+              <tr>
+                <td><textarea>{{dataValues.vendorName}}</textarea></td>
+                <td><textarea readonly>{{dataValues.service}}</textarea></td>
+                <td><textarea readonly>{{dataValues.email}}</textarea></td>
+                <td><textarea readonly>{{dataValues.phone}}</textarea></td>
+                <td><a href="/vendorInfos/{{dataValues.eventInfoId}}">Edit</a></td>
+                <td><button style='cursor:pointer;color:red' data-id="{{dataValues.id}}" class='delete-vendor'
+                    onclick="deleteVendor({{dataValues.id}})">Delete</button></td>
+                {{!-- test top --}}
+                <a href="#" class="updown-arrow" onClick="callUserDetail()" data-control="userBtn"><i
+                    class="icon-arrow-big"></i></a>
+                {{!-- test bottom --}}
+              </tr>
+              {{/each}}
+            </table>
+        </div>
       </div>
     </section>
 
@@ -122,15 +129,15 @@
         })
       });
       function deleteVendor(id) {
-    console.log("this was deleted");
-    console.log(id);
-    $.ajax({
-      method: "DELETE",
-      url: "/api/vendorInfos/" + id 
+        console.log("this was deleted");
+        console.log(id);
+        $.ajax({
+          method: "DELETE",
+          url: "/api/vendorInfos/" + id
+        }
+        )
+        location.reload();
       }
-      )
-      location.reload();   
-  }
     </script>
 </body>
 </main>
